[tool.poetry]
name = "cringe"
version = "0.1.0"
description = ""
authors = ["Alexey Dashko <alex.vipers@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
